--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "02c892f8",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "<module 'cleaning' from '/Users/chandlershortlidge/Desktop/Ironhack/sleep-heath-analysis/cleaning.py'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,334 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "adfdce1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use function to rewrite NaNs as \"None\"\n",
-    "# Dataset notes explain: \n",
-    "# Sleep Disorder: The presence or absence of a sleep disorder in the person (None, Insomnia, Sleep Apnea\n",
-    "health = cl.clean_sleep_disorder(health)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2122e08d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Person ID                  0\n",
-       "Gender                     0\n",
-       "Age                        0\n",
-       "Occupation                 0\n",
-       "Sleep Duration             0\n",
-       "Quality of Sleep           0\n",
-       "Physical Activity Level    0\n",
-       "Stress Level               0\n",
-       "BMI Category               0\n",
-       "Blood Pressure             0\n",
-       "Heart Rate                 0\n",
-       "Daily Steps                0\n",
-       "Sleep Disorder             0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check if function works\n",
-    "health.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2dbd448b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person id</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>occupation</th>\n",
-       "      <th>sleep duration</th>\n",
-       "      <th>quality of sleep</th>\n",
-       "      <th>physical activity level</th>\n",
-       "      <th>stress level</th>\n",
-       "      <th>bmi category</th>\n",
-       "      <th>blood pressure</th>\n",
-       "      <th>heart rate</th>\n",
-       "      <th>daily steps</th>\n",
-       "      <th>sleep disorder</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>27</td>\n",
-       "      <td>Software Engineer</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>42</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Overweight</td>\n",
-       "      <td>126/83</td>\n",
-       "      <td>77</td>\n",
-       "      <td>4200</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Doctor</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>60</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>125/80</td>\n",
-       "      <td>75</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Doctor</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>60</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>125/80</td>\n",
-       "      <td>75</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Sales Representative</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Obese</td>\n",
-       "      <td>140/90</td>\n",
-       "      <td>85</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Sales Representative</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Obese</td>\n",
-       "      <td>140/90</td>\n",
-       "      <td>85</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>369</th>\n",
-       "      <td>370</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>59</td>\n",
-       "      <td>Nurse</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Overweight</td>\n",
-       "      <td>140/95</td>\n",
-       "      <td>68</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>370</th>\n",
-       "      <td>371</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>59</td>\n",
-       "      <td>Nurse</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Overweight</td>\n",
-       "      <td>140/95</td>\n",
-       "      <td>68</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>371</th>\n",
-       "      <td>372</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>59</td>\n",
-       "      <td>Nurse</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Overweight</td>\n",
-       "      <td>140/95</td>\n",
-       "      <td>68</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372</th>\n",
-       "      <td>373</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>59</td>\n",
-       "      <td>Nurse</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Overweight</td>\n",
-       "      <td>140/95</td>\n",
-       "      <td>68</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>373</th>\n",
-       "      <td>374</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>59</td>\n",
-       "      <td>Nurse</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Overweight</td>\n",
-       "      <td>140/95</td>\n",
-       "      <td>68</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>Sleep Apnea</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>374 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     person id  gender  age            occupation  sleep duration  \\\n",
-       "0            1    Male   27     Software Engineer             6.1   \n",
-       "1            2    Male   28                Doctor             6.2   \n",
-       "2            3    Male   28                Doctor             6.2   \n",
-       "3            4    Male   28  Sales Representative             5.9   \n",
-       "4            5    Male   28  Sales Representative             5.9   \n",
-       "..         ...     ...  ...                   ...             ...   \n",
-       "369        370  Female   59                 Nurse             8.1   \n",
-       "370        371  Female   59                 Nurse             8.0   \n",
-       "371        372  Female   59                 Nurse             8.1   \n",
-       "372        373  Female   59                 Nurse             8.1   \n",
-       "373        374  Female   59                 Nurse             8.1   \n",
-       "\n",
-       "     quality of sleep  physical activity level  stress level bmi category  \\\n",
-       "0                   6                       42             6   Overweight   \n",
-       "1                   6                       60             8       Normal   \n",
-       "2                   6                       60             8       Normal   \n",
-       "3                   4                       30             8        Obese   \n",
-       "4                   4                       30             8        Obese   \n",
-       "..                ...                      ...           ...          ...   \n",
-       "369                 9                       75             3   Overweight   \n",
-       "370                 9                       75             3   Overweight   \n",
-       "371                 9                       75             3   Overweight   \n",
-       "372                 9                       75             3   Overweight   \n",
-       "373                 9                       75             3   Overweight   \n",
-       "\n",
-       "    blood pressure  heart rate  daily steps sleep disorder  \n",
-       "0           126/83          77         4200           None  \n",
-       "1           125/80          75        10000           None  \n",
-       "2           125/80          75        10000           None  \n",
-       "3           140/90          85         3000    Sleep Apnea  \n",
-       "4           140/90          85         3000    Sleep Apnea  \n",
-       "..             ...         ...          ...            ...  \n",
-       "369         140/95          68         7000    Sleep Apnea  \n",
-       "370         140/95          68         7000    Sleep Apnea  \n",
-       "371         140/95          68         7000    Sleep Apnea  \n",
-       "372         140/95          68         7000    Sleep Apnea  \n",
-       "373         140/95          68         7000    Sleep Apnea  \n",
-       "\n",
-       "[374 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# make columns lowercase \n",
-    "health = cl.lowercase_columns(health)\n",
-    "health"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "6656555f",
+   "id": "35742adb",
    "metadata": {},
    "outputs": [
     {
@@ -631,17 +305,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>person_id</th>\n",
+       "      <th>id</th>\n",
        "      <th>gender</th>\n",
        "      <th>age</th>\n",
        "      <th>occupation</th>\n",
-       "      <th>sleep_duration</th>\n",
-       "      <th>quality_of_sleep</th>\n",
-       "      <th>physical_activity_level</th>\n",
+       "      <th>sleep_hours</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>activity_min_per_day</th>\n",
        "      <th>stress_level</th>\n",
        "      <th>bmi_category</th>\n",
        "      <th>blood_pressure</th>\n",
-       "      <th>heart_rate</th>\n",
+       "      <th>rhr</th>\n",
        "      <th>daily_steps</th>\n",
        "      <th>sleep_disorder</th>\n",
        "    </tr>\n",
@@ -829,71 +503,64 @@
        "</div>"
       ],
       "text/plain": [
-       "     person_id  gender  age            occupation  sleep_duration  \\\n",
-       "0            1    Male   27     Software Engineer             6.1   \n",
-       "1            2    Male   28                Doctor             6.2   \n",
-       "2            3    Male   28                Doctor             6.2   \n",
-       "3            4    Male   28  Sales Representative             5.9   \n",
-       "4            5    Male   28  Sales Representative             5.9   \n",
-       "..         ...     ...  ...                   ...             ...   \n",
-       "369        370  Female   59                 Nurse             8.1   \n",
-       "370        371  Female   59                 Nurse             8.0   \n",
-       "371        372  Female   59                 Nurse             8.1   \n",
-       "372        373  Female   59                 Nurse             8.1   \n",
-       "373        374  Female   59                 Nurse             8.1   \n",
+       "      id  gender  age            occupation  sleep_hours  sleep_quality  \\\n",
+       "0      1    Male   27     Software Engineer          6.1              6   \n",
+       "1      2    Male   28                Doctor          6.2              6   \n",
+       "2      3    Male   28                Doctor          6.2              6   \n",
+       "3      4    Male   28  Sales Representative          5.9              4   \n",
+       "4      5    Male   28  Sales Representative          5.9              4   \n",
+       "..   ...     ...  ...                   ...          ...            ...   \n",
+       "369  370  Female   59                 Nurse          8.1              9   \n",
+       "370  371  Female   59                 Nurse          8.0              9   \n",
+       "371  372  Female   59                 Nurse          8.1              9   \n",
+       "372  373  Female   59                 Nurse          8.1              9   \n",
+       "373  374  Female   59                 Nurse          8.1              9   \n",
        "\n",
-       "     quality_of_sleep  physical_activity_level  stress_level bmi_category  \\\n",
-       "0                   6                       42             6   Overweight   \n",
-       "1                   6                       60             8       Normal   \n",
-       "2                   6                       60             8       Normal   \n",
-       "3                   4                       30             8        Obese   \n",
-       "4                   4                       30             8        Obese   \n",
-       "..                ...                      ...           ...          ...   \n",
-       "369                 9                       75             3   Overweight   \n",
-       "370                 9                       75             3   Overweight   \n",
-       "371                 9                       75             3   Overweight   \n",
-       "372                 9                       75             3   Overweight   \n",
-       "373                 9                       75             3   Overweight   \n",
+       "     activity_min_per_day  stress_level bmi_category blood_pressure  rhr  \\\n",
+       "0                      42             6   Overweight         126/83   77   \n",
+       "1                      60             8       Normal         125/80   75   \n",
+       "2                      60             8       Normal         125/80   75   \n",
+       "3                      30             8        Obese         140/90   85   \n",
+       "4                      30             8        Obese         140/90   85   \n",
+       "..                    ...           ...          ...            ...  ...   \n",
+       "369                    75             3   Overweight         140/95   68   \n",
+       "370                    75             3   Overweight         140/95   68   \n",
+       "371                    75             3   Overweight         140/95   68   \n",
+       "372                    75             3   Overweight         140/95   68   \n",
+       "373                    75             3   Overweight         140/95   68   \n",
        "\n",
-       "    blood_pressure  heart_rate  daily_steps sleep_disorder  \n",
-       "0           126/83          77         4200           None  \n",
-       "1           125/80          75        10000           None  \n",
-       "2           125/80          75        10000           None  \n",
-       "3           140/90          85         3000    Sleep Apnea  \n",
-       "4           140/90          85         3000    Sleep Apnea  \n",
-       "..             ...         ...          ...            ...  \n",
-       "369         140/95          68         7000    Sleep Apnea  \n",
-       "370         140/95          68         7000    Sleep Apnea  \n",
-       "371         140/95          68         7000    Sleep Apnea  \n",
-       "372         140/95          68         7000    Sleep Apnea  \n",
-       "373         140/95          68         7000    Sleep Apnea  \n",
+       "     daily_steps sleep_disorder  \n",
+       "0           4200           None  \n",
+       "1          10000           None  \n",
+       "2          10000           None  \n",
+       "3           3000    Sleep Apnea  \n",
+       "4           3000    Sleep Apnea  \n",
+       "..           ...            ...  \n",
+       "369         7000    Sleep Apnea  \n",
+       "370         7000    Sleep Apnea  \n",
+       "371         7000    Sleep Apnea  \n",
+       "372         7000    Sleep Apnea  \n",
+       "373         7000    Sleep Apnea  \n",
        "\n",
        "[374 rows x 13 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# add underscores to column names\n",
-    "health = cl.add_underscore(health)\n",
+    "# call function for cleaning all data\n",
+    "health = cl.clean_data(health)\n",
+    "\n",
     "health"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "787d2481",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8edfa68",
+   "id": "752493b9",
    "metadata": {},
    "outputs": [],
    "source": []
