calculated mean and median sleep hours

--- a/main.ipynb
+++ b/main.ipynb
@@ -480,6 +480,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7d6a2b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg. Sleep Hours:  7.13\n",
+      "Median Sleep Hours:  7.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Avg. Sleep Hours: \", str(health.sleep_hours.mean().round(2)))\n",
+    "print(\"Median Sleep Hours: \", str(health.sleep_hours.median().round(2)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "68e22994",
    "metadata": {},
