--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "02c892f8",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "import cleaning as cl \n",
     "import importlib\n",
     "importlib.reload(cl)\n",
-    "from scipy.stats import pearsonr\n"
+    "from scipy.stats import pearsonr\n",
+    "import scipy.stats as st\n"
    ]
   },
   {
@@ -789,6 +790,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "031f411c",
+   "metadata": {},
+   "source": [
+    "### BMI categories and sleep"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "b997f156",
@@ -824,6 +833,63 @@
     "plt.xlabel(\"BMI Category\")\n",
     "plt.ylabel(\"Sleep Hours\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c1cb5a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results:  F_onewayResult(statistic=np.float64(31.001718690897327), pvalue=np.float64(3.545813768064132e-13))\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_normal = health[health[\"bmi_category\"]==\"Normal\"][\"sleep_hours\"]\n",
+    "df_overweight = health[health[\"bmi_category\"]==\"Overweight\"][\"sleep_hours\"]\n",
+    "df_obease = health[health[\"bmi_category\"]==\"Obese\"][\"sleep_hours\"]\n",
+    "\n",
+    "# H0: BMI does not impact sleep hours\n",
+    "# H1: BMI does impact sleep hours\n",
+    "\n",
+    "#Significance level: 5%\n",
+    "alpha = 0.05\n",
+    "\n",
+    "results = st.f_oneway(df_normal, df_overweight, df_obease)\n",
+    "print(\"Results: \", str(results))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a2e2523",
+   "metadata": {},
+   "source": [
+    "**Observations:** The boxplot showed variation in sleep hours between BMI groups—generally lower for overweight and obese people. The boxplot was chosen in order to handle outliers. A simple bar chart showed much less variation between groups due to these outliers distorting the mean. To confirm the hypothesis that BMI impacts sleep, I ran an ANOVA test. A large f-statistic (31) and extremely small p-value (<0.05) indicates that we can reject the null hypothesis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25faca6c",
+   "metadata": {},
+   "source": [
+    "### BMI and physical activity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd907e8d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19b9a39d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
