added business objective

--- a/main.ipynb
+++ b/main.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "## Sleep Health Analysis\n",
     "\n",
+    "### Business objective: create a new health app. \n",
+    "\n",
+    "##### Original idea: Create a wearable device that helps users increase daily activity, which indirectly impacts sleep duration. \n",
+    "\n",
     "- H0: There is no relationship between sleep duration (X) and physical fitness duration (y)\n",
     "- H1: There is a statistically significant relationship between variable X and variable y."
    ]
@@ -634,6 +638,42 @@
    "source": [
     "Observations: Strong negative trend suggests higher stress levels are correlated with less sleep."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "31494845",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation, Stress & Sleep:  -0.8110230278940431\n",
+      "P-value, Stress & Sleep:  1.2378076181537577e-88\n",
+      "r-squared:  0.6577583517744219\n",
+      "r-squared percent: 65.78%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "correlation, p_value = pearsonr(health['stress_level'], health['sleep_hours'])\n",
+    "r_squared = correlation ** 2\n",
+    "r_squared_percent = r_squared * 100\n",
+    "print(\"Correlation, Stress & Sleep: \", correlation)\n",
+    "print(\"P-value, Stress & Sleep: \", p_value)\n",
+    "print(\"r-squared: \", r_squared)\n",
+    "print(f\"r-squared percent: {r_squared_percent:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e77e03d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
