--- a/main.ipynb
+++ b/main.ipynb
@@ -1083,8 +1083,113 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b9a39d",
+   "id": "2916f5d0",
    "metadata": {},
+   "source": [
+    "# Machine Learning "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d34e99ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reshape the data from 1D to 2D\n",
+    "X = health[['stress_level']]  \n",
+    "y = health['sleep_hours']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "58f25f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train, Test, Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "4cb01b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted values: [6.19292045 8.02387061 8.02387061 6.19292045 6.55911048 6.92530051\n",
+      " 7.65768058 7.65768058 8.02387061 7.29149055 8.02387061 6.19292045\n",
+      " 6.55911048 6.55911048 6.92530051 6.19292045 6.55911048 7.29149055\n",
+      " 7.65768058 7.65768058 6.19292045 6.55911048 6.55911048 6.92530051\n",
+      " 7.29149055 6.55911048 6.92530051 6.19292045 6.19292045 7.65768058\n",
+      " 7.65768058 6.92530051 6.19292045 6.19292045 7.65768058 7.65768058\n",
+      " 7.29149055 6.19292045 7.29149055 6.55911048 6.19292045 8.02387061\n",
+      " 6.92530051 6.19292045 6.92530051 8.02387061 6.19292045 7.29149055\n",
+      " 7.65768058 8.02387061 6.55911048 6.19292045 7.65768058 6.55911048\n",
+      " 7.65768058 6.55911048 6.19292045 7.65768058 6.55911048 7.65768058\n",
+      " 6.55911048 8.02387061 7.65768058 6.19292045 7.29149055 7.29149055\n",
+      " 7.29149055 8.02387061 6.19292045 7.29149055 6.92530051 8.02387061\n",
+      " 7.65768058 6.92530051 7.29149055]\n",
+      "intercept: 9.122440704725683 coeficent: [-0.36619003]\n",
+      "R²: 0.6110597515061655\n",
+      "MSE: 0.23008391347166993\n",
+      "Root Mean Squared Error: 0.47967063019500156\n",
+      "Mean Absolute Error: 0.3468110086476011\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the Linear Regression estimator\n",
+    "lm = LinearRegression()\n",
+    "\n",
+    "# Perform the fitting\n",
+    "lm.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred = lm.predict(X_test)\n",
+    "predictions = lm.predict(X_test)\n",
+    "print(\"predicted values:\", predictions)\n",
+    "\n",
+    "# Print coefs\n",
+    "print(\"intercept:\", lm.intercept_, \"coeficent:\", lm.coef_)\n",
+    "\n",
+    "# R² score\n",
+    "r2 = lm.score(X_test, y_test)\n",
+    "\n",
+    "# Errors\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = mse**0.5\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"R²:\", r2)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "print(\"Mean Absolute Error:\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b8790d5",
+   "metadata": {},
+   "source": [
+    "**Observations:** \n",
+    "- Intercept: 91.2 hours (theoretical sleep with zero stress)\n",
+    "- Coeficent: -0.37. For every 1-point increase in stress you lose .37 hours (22 minutes) of sleep.\n",
+    "- R-squared: Model explains 61% fo variance in unseen data.\n",
+    "- MAE: 0.35 hours (~21 minutes average error in predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99f63cb2",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
