--- a/main.ipynb
+++ b/main.ipynb
@@ -1318,6 +1318,194 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ecec1a",
+   "metadata": {},
+   "source": [
+    "# Connecting an API: Our World In Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "82ba3d93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "# Fetch the data.\n",
+    "df = pd.read_csv(\"https://ourworldindata.org/grapher/death-rate-from-cardiovascular-disease-age-standardized-ghe.csv?v=1&csvType=full&useColumnShortNames=true\", storage_options = {'User-Agent': 'Our World In Data data fetch/1.0'})\n",
+    "\n",
+    "# Fetch the metadata\n",
+    "metadata = requests.get(\"https://ourworldindata.org/grapher/death-rate-from-cardiovascular-disease-age-standardized-ghe.metadata.json?v=1&csvType=full&useColumnShortNames=true\").json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a72f1f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>death_rate100k__age_group_age_standardized__sex_both_sexes__cause_cardiovascular_diseases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>696.05510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>702.28590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>692.65076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>681.37740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>675.17285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4417</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>361.24330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4418</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>364.30536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4419</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>352.93920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4420</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>379.96840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4421</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>354.59720</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4422 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Entity Code  Year  \\\n",
+       "0     Afghanistan  AFG  2000   \n",
+       "1     Afghanistan  AFG  2001   \n",
+       "2     Afghanistan  AFG  2002   \n",
+       "3     Afghanistan  AFG  2003   \n",
+       "4     Afghanistan  AFG  2004   \n",
+       "...           ...  ...   ...   \n",
+       "4417     Zimbabwe  ZWE  2017   \n",
+       "4418     Zimbabwe  ZWE  2018   \n",
+       "4419     Zimbabwe  ZWE  2019   \n",
+       "4420     Zimbabwe  ZWE  2020   \n",
+       "4421     Zimbabwe  ZWE  2021   \n",
+       "\n",
+       "      death_rate100k__age_group_age_standardized__sex_both_sexes__cause_cardiovascular_diseases  \n",
+       "0                                             696.05510                                          \n",
+       "1                                             702.28590                                          \n",
+       "2                                             692.65076                                          \n",
+       "3                                             681.37740                                          \n",
+       "4                                             675.17285                                          \n",
+       "...                                                 ...                                          \n",
+       "4417                                          361.24330                                          \n",
+       "4418                                          364.30536                                          \n",
+       "4419                                          352.93920                                          \n",
+       "4420                                          379.96840                                          \n",
+       "4421                                          354.59720                                          \n",
+       "\n",
+       "[4422 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bd61108",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
