--- a/main.ipynb
+++ b/main.ipynb
@@ -17,10 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "02c892f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (cleaning.py, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
+      "  File \u001b[92m~/Library/Python/3.13/lib/python/site-packages/IPython/core/interactiveshell.py:3670\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[36m  \u001b[39m\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport cleaning as cl\u001b[39m\n",
+      "  \u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Ironhack/sleep-heath-analysis/cleaning.py:24\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m\"death_rate100k__age_group_age_standardized__sex_both_sexes__cause_cardiovascular_diseases\": \"death_rate\"\u001b[39m\n                                                                                               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy as sp \n",
@@ -43,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b521eff",
    "metadata": {},
    "outputs": [
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1ed6870c",
    "metadata": {},
    "outputs": [
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3c024749",
    "metadata": {},
    "outputs": [
@@ -262,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e42550d5",
    "metadata": {},
    "outputs": [
@@ -284,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "35742adb",
    "metadata": {},
    "outputs": [
@@ -458,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b867b309",
    "metadata": {},
    "outputs": [
@@ -482,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7d6a2b9a",
    "metadata": {},
    "outputs": [
@@ -510,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "752493b9",
    "metadata": {},
    "outputs": [
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "78dfbc40",
    "metadata": {},
    "outputs": [
@@ -601,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "89a0afa4",
    "metadata": {},
    "outputs": [
@@ -647,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "643d8596",
    "metadata": {},
    "outputs": [
@@ -688,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f6709099",
    "metadata": {},
    "outputs": [
@@ -734,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "71eb3ebb",
    "metadata": {},
    "outputs": [
@@ -778,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ac0ecd0c",
    "metadata": {},
    "outputs": [
@@ -823,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8c0f7f96",
    "metadata": {},
    "outputs": [
@@ -859,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1432d1a5",
    "metadata": {},
    "outputs": [
@@ -896,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9a55ecf7",
    "metadata": {},
    "outputs": [
@@ -932,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2b6d6745",
    "metadata": {},
    "outputs": [
@@ -978,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b997f156",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c1cb5a8e",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "b1b6a605",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "58fbddb6",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d34e99ee",
    "metadata": {},
    "outputs": [],
@@ -1230,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "58f25f58",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4cb01b26",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "82ba3d93",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "a72f1f7b",
    "metadata": {},
    "outputs": [
@@ -1503,6 +1515,186 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2bd61108",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>entity</th>\n",
+       "      <th>code</th>\n",
+       "      <th>year</th>\n",
+       "      <th>death_rate100k__age_group_age_standardized__sex_both_sexes__cause_cardiovascular_diseases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>696.05510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>702.28590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>692.65076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>681.37740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>675.17285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4417</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>361.24330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4418</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>364.30536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4419</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>352.93920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4420</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>379.96840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4421</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>354.59720</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4422 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           entity code  year  \\\n",
+       "0     Afghanistan  AFG  2000   \n",
+       "1     Afghanistan  AFG  2001   \n",
+       "2     Afghanistan  AFG  2002   \n",
+       "3     Afghanistan  AFG  2003   \n",
+       "4     Afghanistan  AFG  2004   \n",
+       "...           ...  ...   ...   \n",
+       "4417     Zimbabwe  ZWE  2017   \n",
+       "4418     Zimbabwe  ZWE  2018   \n",
+       "4419     Zimbabwe  ZWE  2019   \n",
+       "4420     Zimbabwe  ZWE  2020   \n",
+       "4421     Zimbabwe  ZWE  2021   \n",
+       "\n",
+       "      death_rate100k__age_group_age_standardized__sex_both_sexes__cause_cardiovascular_diseases  \n",
+       "0                                             696.05510                                          \n",
+       "1                                             702.28590                                          \n",
+       "2                                             692.65076                                          \n",
+       "3                                             681.37740                                          \n",
+       "4                                             675.17285                                          \n",
+       "...                                                 ...                                          \n",
+       "4417                                          361.24330                                          \n",
+       "4418                                          364.30536                                          \n",
+       "4419                                          352.93920                                          \n",
+       "4420                                          379.96840                                          \n",
+       "4421                                          354.59720                                          \n",
+       "\n",
+       "[4422 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# apply lowercase function\n",
+    "df = cl.lowercase_columns(df)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "008241b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'cleaning' has no attribute 'rename_cvd_columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[47]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df = \u001b[43mcl\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrename_cvd_columns\u001b[49m(df)\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'cleaning' has no attribute 'rename_cvd_columns'"
+     ]
+    }
+   ],
+   "source": [
+    "df = cl.rename_cvd_columns(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d9847df",
    "metadata": {},
    "outputs": [],
    "source": []
