--- a/main.ipynb
+++ b/main.ipynb
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "a72f1f7b",
    "metadata": {},
    "outputs": [
@@ -1483,30 +1483,70 @@
        "      <td>2021</td>\n",
        "      <td>80.117714</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3145</th>\n",
+       "      <td>Peru</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>85.201050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1891</th>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>IRL</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>87.086850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4201</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>GBR</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>87.400470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1935</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>88.481470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1781</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>ISL</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>88.793580</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          country code  year  death_rate\n",
-       "3409   San Marino  SMR  2021   60.133038\n",
-       "3717  South Korea  KOR  2021   60.415630\n",
-       "1979        Japan  JPN  2021   69.253530\n",
-       "1451       France  FRA  2021   70.002360\n",
-       "1913       Israel  ISR  2021   70.687570\n",
-       "241     Australia  AUS  2021   71.378100\n",
-       "109       Andorra  AND  2021   72.581800\n",
-       "2287   Luxembourg  LUX  2021   74.000370\n",
-       "2969       Norway  NOR  2021   74.612976\n",
-       "417       Belgium  BEL  2021   75.250534\n",
-       "3871  Switzerland  CHE  2021   76.227066\n",
-       "2771  Netherlands  NLD  2021   76.950650\n",
-       "3761        Spain  ESP  2021   77.095240\n",
-       "1099      Denmark  DNK  2021   80.034480\n",
-       "725        Canada  CAN  2021   80.117714"
+       "             country code  year  death_rate\n",
+       "3409      San Marino  SMR  2021   60.133038\n",
+       "3717     South Korea  KOR  2021   60.415630\n",
+       "1979           Japan  JPN  2021   69.253530\n",
+       "1451          France  FRA  2021   70.002360\n",
+       "1913          Israel  ISR  2021   70.687570\n",
+       "241        Australia  AUS  2021   71.378100\n",
+       "109          Andorra  AND  2021   72.581800\n",
+       "2287      Luxembourg  LUX  2021   74.000370\n",
+       "2969          Norway  NOR  2021   74.612976\n",
+       "417          Belgium  BEL  2021   75.250534\n",
+       "3871     Switzerland  CHE  2021   76.227066\n",
+       "2771     Netherlands  NLD  2021   76.950650\n",
+       "3761           Spain  ESP  2021   77.095240\n",
+       "1099         Denmark  DNK  2021   80.034480\n",
+       "725           Canada  CAN  2021   80.117714\n",
+       "3145            Peru  PER  2021   85.201050\n",
+       "1891         Ireland  IRL  2021   87.086850\n",
+       "4201  United Kingdom  GBR  2021   87.400470\n",
+       "1935           Italy  ITA  2021   88.481470\n",
+       "1781         Iceland  ISL  2021   88.793580"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1555,7 @@
     "cvd_data = cl.clean_cvd_data(cvd_data) # apply wraper function\n",
     "\n",
     "#view by top 15\n",
-    "cvd_15 = cvd_data[cvd_data[\"year\"] == 2021].sort_values(by=\"death_rate\", ascending=True).head(15)\n",
+    "cvd_20 = cvd_data[cvd_data[\"year\"] == 2021].sort_values(by=\"death_rate\", ascending=True).head(20)\n",
     "\n",
     "cvd_15"
    ]
@@ -1553,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "id": "e28fbd2d",
    "metadata": {},
    "outputs": [
@@ -1658,37 +1698,67 @@
        "      <td>Sweden</td>\n",
        "      <td>83.26</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Macau</td>\n",
+       "      <td>83.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>82.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>82.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>82.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Martinique</td>\n",
+       "      <td>82.56</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             country  life_expectancy\n",
-       "1              Japan            84.71\n",
-       "2        South Korea            84.33\n",
-       "3   French Polynesia            84.07\n",
-       "4            Andorra            84.04\n",
-       "5        Switzerland            83.95\n",
-       "6          Australia            83.92\n",
-       "7          Singapore            83.74\n",
-       "8              Italy            83.72\n",
-       "9              Spain            83.67\n",
-       "10           Réunion            83.55\n",
-       "11            France            83.33\n",
-       "12            Norway            83.31\n",
-       "13             Malta            83.30\n",
-       "14          Guernsey            83.27\n",
-       "15            Sweden            83.26"
+       "                 country  life_expectancy\n",
+       "1                  Japan            84.71\n",
+       "2            South Korea            84.33\n",
+       "3       French Polynesia            84.07\n",
+       "4                Andorra            84.04\n",
+       "5            Switzerland            83.95\n",
+       "6              Australia            83.92\n",
+       "7              Singapore            83.74\n",
+       "8                  Italy            83.72\n",
+       "9                  Spain            83.67\n",
+       "10               Réunion            83.55\n",
+       "11                France            83.33\n",
+       "12                Norway            83.31\n",
+       "13                 Malta            83.30\n",
+       "14              Guernsey            83.27\n",
+       "15                Sweden            83.26\n",
+       "16                 Macau            83.08\n",
+       "17  United Arab Emirates            82.91\n",
+       "18               Iceland            82.69\n",
+       "19                Canada            82.63\n",
+       "20            Martinique            82.56"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "life_exp_15 = life_exp.sort_values(by=\"life_expectancy\", ascending=False).head(15)\n",
-    "life_exp_15"
+    "life_exp_20 = life_exp.sort_values(by=\"life_expectancy\", ascending=False).head(20)\n",
+    "life_exp_20"
    ]
   },
   {
@@ -1701,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "57b5644c",
    "metadata": {},
    "outputs": [
@@ -1798,29 +1868,56 @@
        "      <td>77.095240</td>\n",
        "      <td>83.67</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>80.117714</td>\n",
+       "      <td>82.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>88.481470</td>\n",
+       "      <td>83.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>ISL</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>88.793580</td>\n",
+       "      <td>82.69</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       country code  year  death_rate  life_expectancy\n",
-       "0  South Korea  KOR  2021   60.415630            84.33\n",
-       "1        Japan  JPN  2021   69.253530            84.71\n",
-       "2       France  FRA  2021   70.002360            83.33\n",
-       "3    Australia  AUS  2021   71.378100            83.92\n",
-       "4      Andorra  AND  2021   72.581800            84.04\n",
-       "5       Norway  NOR  2021   74.612976            83.31\n",
-       "6  Switzerland  CHE  2021   76.227066            83.95\n",
-       "7        Spain  ESP  2021   77.095240            83.67"
+       "        country code  year  death_rate  life_expectancy\n",
+       "0   South Korea  KOR  2021   60.415630            84.33\n",
+       "1         Japan  JPN  2021   69.253530            84.71\n",
+       "2        France  FRA  2021   70.002360            83.33\n",
+       "3     Australia  AUS  2021   71.378100            83.92\n",
+       "4       Andorra  AND  2021   72.581800            84.04\n",
+       "5        Norway  NOR  2021   74.612976            83.31\n",
+       "6   Switzerland  CHE  2021   76.227066            83.95\n",
+       "7         Spain  ESP  2021   77.095240            83.67\n",
+       "8        Canada  CAN  2021   80.117714            82.63\n",
+       "9         Italy  ITA  2021   88.481470            83.72\n",
+       "10      Iceland  ISL  2021   88.793580            82.69"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_merged = cvd_15.merge(life_exp_15, on=\"country\", how=\"inner\")\n",
+    "df_merged = cvd_20.merge(life_exp_20, on=\"country\", how=\"inner\")\n",
     "df_merged"
    ]
   },
