--- a/main.ipynb
+++ b/main.ipynb
@@ -1951,6 +1951,102 @@
    "source": [
     "**Observations:** A correlation coefficient of -0.6 shows a strong negative correlation between life expectancy and cardiovascular disease. As cardiovascular disease prevalence rises, life expectancy falls. An r-squared of 0.34 of 0.34 indicates that CVD death rates explain 34% of the variation in life expectancy across countries.\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "65772783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reshape the data from 1D to 2D\n",
+    "X = df_merged[['cvd_death_rate']]  \n",
+    "y = df_merged['life_expectancy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "74a52149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train, Test, Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b3ed0867",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted values: [79.4765988  79.28602264 70.5893722  72.84392582 77.97656242 78.36688988\n",
+      " 65.17593041 73.04027574 73.0492417  75.92723596 74.08712463 79.92946394\n",
+      " 72.51158249 70.292474   73.26413461 72.99327316 63.756933   68.46600607\n",
+      " 74.07193179 74.87547905 72.38839465 65.72739591 73.54216287 71.32405013\n",
+      " 77.67218118 71.259316   75.05434214 69.69379369 77.27057389 80.22379628\n",
+      " 78.25414939 78.25787023 68.79928818 75.63023796 72.12167872 76.75438412]\n",
+      "intercept: 82.87200151141737 coeficent: [-0.03823928]\n",
+      "R²: 0.15526058202231896\n",
+      "MSE: 49.180669209312825\n",
+      "Root Mean Squared Error: 7.012893069861597\n",
+      "Mean Absolute Error: 5.38587103237385\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the Linear Regression estimator\n",
+    "lm = LinearRegression()\n",
+    "\n",
+    "# Perform the fitting\n",
+    "lm.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred = lm.predict(X_test)\n",
+    "predictions = lm.predict(X_test)\n",
+    "print(\"predicted values:\", predictions)\n",
+    "\n",
+    "# Print coefs\n",
+    "print(\"intercept:\", lm.intercept_, \"coeficent:\", lm.coef_)\n",
+    "\n",
+    "# R² score\n",
+    "r2 = lm.score(X_test, y_test)\n",
+    "\n",
+    "# Errors\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = mse**0.5\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"R²:\", r2)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "print(\"Mean Absolute Error:\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "657e2d06",
+   "metadata": {},
+   "source": [
+    "**Observations:** \n",
+    "- Intercept: 82.87 (theoretical life expectency for a country with no CVD deaths per 100,000)\n",
+    "- Coeficent: -0.03 \n",
+    "For every 1-point increase in CVD death rate (per 100k), life expectancy decreases by 0.03 years (about 11 days).\n",
+    "So if CVD deaths increase by 100 per 100k people, life expectancy drops by ~3 years.\n",
+    "- R-squared: Model explains 15% fo variance in unseen data.\n",
+    "- MAE: 5.3 year average error in predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc62896",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
