--- a/main.ipynb
+++ b/main.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "## Sleep Health Analysis\n",
     "\n",
-    "### Business objective: create a new health app. \n",
+    "### Business objective: create a new health app or device with the objective of delivering the highest ROI to a user's overall health. \n",
     "\n",
-    "##### Original idea: Create a wearable device that helps users increase daily activity, which is widely believed to impact sleep duration and quality, leading to better overall health outcomes."
+    "##### **Idea:** Healthy sleep is one of the most essential aspects of health. Let's help users increase their daily activity, which we believe has an outsized impact on sleep duration and quality."
    ]
   },
   {
@@ -359,9 +359,9 @@
    "id": "8e49adee",
    "metadata": {},
    "source": [
-    "**Observations:** A correlation coefficient of 0.21 shows a slightly positive relationship between the variables. Further analysis shows an r-squared of 0.04. This means only 4% of the variation in people's sleep can be attributed to activity levels. The other 96% is due to other factors. A p-value well below 0.05 shows strong statistical evidence against our null hypothesis, suggesting that there is a statistically significant relationship between sleep duration and physical fitness duration.\n",
+    "**Observations:** A correlation of 0.21 indicates a weak positive relationship between daily activity minutes and sleep duration. The r-squared value of ~0.04 means only about 4% of the variance in sleep hours is shared with activity levels, leaving the vast majority (96%) explained by other factors. Although the p-value (<0.001) shows the relationship is statistically significant, the effect size is small. \n",
     "\n",
-    "But the weak correlation and r-squared warrents further data exploration in order to find out what most impacts sleep."
+    "This weak association suggests that sleep duration is influenced far more by other variables, and further exploration is warranted to identify those drivers."
    ]
   },
   {
@@ -503,9 +503,9 @@
    "id": "c3b144d9",
    "metadata": {},
    "source": [
-    "**Observations:** We can see from our r-squared that stress explains ~66% of the variation in sleep hours—much stronger than activity levels. The low p-value (<0.05) gives confidence that this high variation is not due to an error or chance.  \n",
+    "**Observations:** Stress shares ~66% of the variance with sleep hours. The low p-value (<0.05) gives confidence that this high variation is not due to an error or chance.  \n",
     "\n",
-    "In short, high stress is likely to result in short sleep duration. But what impacts stress?"
+    "In short, high stress is strongly associated with short sleep duration. But what impacts stress?"
    ]
   },
   {
@@ -596,7 +596,7 @@
    "id": "1e82a83d",
    "metadata": {},
    "source": [
-    "**Observation:** Stress explains 45% of the variation in resting heart rate, with a high correlation factor 0.66 showing a strong positive relationship between high stress and high RHR.\n",
+    "**Observation:** About 45% of the variance in stress and RHR is shared, indicating a strong positive association. with a high correlation factor 0.66 showing a moderate-to-strong positive relationship between high stress and high RHR.\n",
     "\n",
     "Having higher (or lower) stress is associated with having higher (or lower) RHR."
    ]
@@ -681,7 +681,7 @@
    "id": "c8443751",
    "metadata": {},
    "source": [
-    "**Observation:** RHR explains 44% of the variation in sleep quality, with a strong (-0.66) negative correlation. This suggests a statistically significant relationship between higher resting heart rate and lower sleep quality.\n",
+    "**Observation:** About 44% of the variability in sleep quality is associated with variability in RHR, with a strong (-0.66) negative correlation. This suggests a statistically significant relationship between higher resting heart rate and lower sleep quality.\n",
     "\n",
     "**Remember:** our correlation analysis showed an almost 1:1 relationship between sleep quality and sleep duration. "
    ]
@@ -796,7 +796,7 @@
    "id": "974e0e64",
    "metadata": {},
    "source": [
-    "### Blood Pressure and Stress"
+    "# Blood Pressure and Stress"
    ]
   },
   {
@@ -925,7 +925,11 @@
    "id": "99799333",
    "metadata": {},
    "source": [
-    "**Observations:** Stress and high blood pressure have a statistically significant relationship."
+    "**Observations:** Stress and high blood pressure have a statistically significant relationship.\n",
+    "\n",
+    "High blood pressure, or hypertension, significantly increases the risk of cardiovascular diseases such as coronary artery disease, heart failure, stroke, and kidney disease by straining the heart and damaging blood vessels over time. \n",
+    "\n",
+    "We'll explore this in more detail later."
    ]
   },
   {
@@ -1025,10 +1029,12 @@
    "metadata": {},
    "source": [
     "**Observations:** \n",
-    "- Intercept: 91.2 hours (theoretical sleep with zero stress)\n",
-    "- Coeficent: -0.37. For every 1-point increase in stress you lose .37 hours (22 minutes) of sleep.\n",
-    "- R-squared: Model explains 61% fo variance in unseen data.\n",
-    "- MAE: 0.35 hours (~21 minutes average error in predictions)"
+    "- Intercept: 9.2 hours (theoretical sleep with zero stress)\n",
+    "- Coefficient: -0.37. For every 1-point increase in stress you lose .37 hours (22 minutes) of sleep.\n",
+    "- R-squared: Model explains 61% of variance in unseen data.\n",
+    "- MAE: 0.35 hours (~21 minutes average error in predictions)\n",
+    "\n",
+    "#### Summary: Stress and RHR have a major impact on healthy sleep. By helping people reduce stress, we can help them get a good night's rest, lower their blood pressure, and increase their overall health outcomes."
    ]
   },
   {
@@ -1040,8 +1046,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4db512bd",
+   "metadata": {},
+   "source": [
+    "#### Cardiovascular diseases (CVD) are the most common causes of death, responsible for a third of all deaths globally, a total of around 18 million annually. \n",
+    "\n",
+    "#### By lowering risk for CVD through better stress management and sleep hygiene, we can directly impact global longevity. \n",
+    "\n",
+    "To show this, let's start by looking at cardiovascular death rates globally from https://ourworldindata.org/cardiovascular-diseases"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "82ba3d93",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1067,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "# Fetch the data.\n",
+    "# Fetch the data from OurWorldInData.org\n",
     "cvd_data = pd.read_csv(\"https://ourworldindata.org/grapher/death-rate-from-cardiovascular-disease-age-standardized-ghe.csv?v=1&csvType=full&useColumnShortNames=true\", storage_options = {'User-Agent': 'Our World In Data data fetch/1.0'})\n",
     "\n",
     "# Fetch the metadata\n",
@@ -1058,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "a72f1f7b",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1215,7 @@
    "source": [
     "cvd_data = cl.clean_cvd_data(cvd_data) # apply wraper function\n",
     "\n",
-    "#view by top 15\n",
+    "#view death rates per 100,000 by year 2021 (latest year)\n",
     "cvd_2021 = cvd_data[cvd_data[\"year\"] == 2021].sort_values(by=\"cvd_death_rate\", ascending=True)\n",
     "\n",
     "cvd_2021"
@@ -1209,6 +1227,14 @@
    "metadata": {},
    "source": [
     "# Webscraping Wikipedia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5c57c8",
+   "metadata": {},
+   "source": [
+    "#### Now, let's look at a list of countries by life expectancy by scraping Wikipedia. "
    ]
   },
   {
@@ -1351,6 +1377,14 @@
    "source": [
     "life_exp = life_exp.sort_values(by=\"life_expectancy\", ascending=False)\n",
     "life_exp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f044e24",
+   "metadata": {},
+   "source": [
+    "We can see a few similar countries! Let's investigate further. We'll start by merging these tables by country. "
    ]
   },
   {
@@ -1595,6 +1629,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "911afeae",
+   "metadata": {},
+   "source": [
+    "Several countries match. We'll create a regplot and find Pearson r to further explore."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "b96aa7f9",
@@ -1663,7 +1705,11 @@
    "id": "ed8cbaed",
    "metadata": {},
    "source": [
-    "**Observations:** A correlation coefficient of -0.6 shows a strong negative correlation between life expectancy and cardiovascular disease. As cardiovascular disease prevalence rises, life expectancy falls. An r-squared of 0.34 of 0.34 indicates that CVD death rates explain 34% of the variation in life expectancy across countries.\""
+    "**Observations:** A correlation coefficient of -0.6 shows a strong negative correlation between life expectancy and cardiovascular disease. An r-squared of 0.34 of 0.34 indicates that CVD death rates explain 34% of the variation in life expectancy across countries.\n",
+    "\n",
+    "It's exactly as we suspected. As cardiovascular disease prevalence rises, life expectancy falls.\n",
+    "\n",
+    "Let's model this data to see if we can predict outcomes. "
    ]
   },
   {
@@ -1749,7 +1795,7 @@
    "source": [
     "**Observations:** \n",
     "- Intercept: 82.87 (theoretical life expectency for a country with no CVD deaths per 100,000)\n",
-    "- Coeficent: -0.03 \n",
+    "- Coefficent: -0.03 \n",
     "For every 1-point increase in CVD death rate (per 100k), life expectancy decreases by 0.03 years (about 11 days).\n",
     "So if CVD deaths increase by 100 per 100k people, life expectancy drops by ~3 years.\n",
     "- R-squared: Model explains 15% fo variance in unseen data.\n",
@@ -1759,6 +1805,18 @@
   {
    "cell_type": "markdown",
    "id": "0bc62896",
+   "metadata": {},
+   "source": [
+    "# Final summary\n",
+    "\n",
+    "Building a meditation app that targets stress reduction delivers higher ROI for user health than an activity-based approach. \n",
+    "\n",
+    "It aligns with the client’s mission, targets a massive addressable market (tens of millions of poor sleepers), and positions the company in a fast-growing wellness category.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a380a4",
    "metadata": {},
    "source": []
   }
